Update binary classifier for Jerk.ipynb

--- a/Scheme _1/Jerk/binary classifier for Jerk.ipynb
+++ b/Scheme _1/Jerk/binary classifier for Jerk.ipynb
@@ -881,7 +881,7 @@
     "\n",
     "\n",
     "plt.plot(gamma,Noise_score,linestyle='-', marker='o', color='k')\n",
-    "plt.ylabel('Persistence Score')\n",
+    "plt.ylabel('Noise Score')\n",
     "plt.xlabel('gamma')\n",
     "\n",
     "plt.axvline(x = 0.119, color = 'k', linestyle = ':')\n",
